<resources>
    <string name="app_name">SecurityApp</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="parthiv_vora">Parthiv Vora</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="in_icon">in_icon</string>
    <string name="out_icon">out_icon</string>
    <string name="welcome_to_secure_home">Welcome to Secure Home</string>
    <string name="home">Home</string>
    <string name="in_door">In Door</string>
    <string name="out_door">Out Door</string>
    <string name="menu_icon">menu_icon</string>
    <string name="_2_10_pm">2:10 PM</string>
    <string name="exit">EXIT</string>
    <string name="ic_arrow_back">ic_arrow_back</string>
    <string name="no_visitor_data_found">No visitor data found</string>
    <string name="security1">Security1</string>
    <string name="app_logo">app_logo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="ic_arrow_down">ic_arrow_down</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="entry">ENTRY</string>
    <string name="select_category">Select category</string>
    <string name="building_name">Building Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="flat_number">Flat Number</string>
    <string name="car_bike_no">Car / Bike No</string>
    <string name="person">Person</string>
    <string name="name">Name</string>
    <string name="remark">Remark</string>
    <string name="submit">Submit</string>
    <string name="visitor_image">visitor_image</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="in_time_icon">in_time_icon</string>
    <string name="parthiv">Parthiv</string>
    <string name="textview">TextView</string>
    <string name="staff_exit">Staff Exit</string>
    <string name="staff_entry">Staff Entry</string>
    <string name="splash_logo">splash_logo</string>
    <string name="staff">Staff</string>
    <string name="visitor_entry">Visitor Entry</string>
    <string name="ic_arrow_forward">ic_arrow_forward</string>
    <string name="collecting_and_using_your_personal_data">Collecting and Using Your Personal Data</string>
    <string name="security_of_your_personal_data">Security of Your Personal Data</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_securehome_gmail_com">Email: securehome@gmail.com</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>

    <string-array name="visitor_category">
        <item>Engineer</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Milk Man</item>
        <item>Bank Man</item>
        <item>Cleaner</item>
        <item>News Paper</item>
        <item>Lift Mechanic</item>
        <item>Delivery Men</item>
        <item>Grocery Men</item>
        <item>Doctor</item>
        <item>Guest</item>
        <item>Other</item>
    </string-array>

    <string-array name="building_name">
        <item>A-1</item>
        <item>A-2</item>
        <item>B-1</item>
        <item>B-2</item>
        <item>C-1</item>
        <item>C-2</item>
        <item>D-1</item>
        <item>D-2</item>
        <item>E-1</item>
        <item>E-2</item>
    </string-array>
</resources>