<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InDoorActivity"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/inDoorAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/ic_arrow_back"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/entry"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/visitorImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inDoorAppBar"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/visitor_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/visitor_image"
                android:scaleType="centerCrop"
                android:src="@drawable/user"
                app:shapeAppearanceOverlay="@style/user_image_circular" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/visitorImage"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:backgroundTint="@color/white"
                    android:paddingVertical="12dp"
                    android:hint="@string/name"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:backgroundTint="@color/white"
                    android:paddingVertical="12dp"
                    android:hint="@string/mobile_number"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="5dp">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/buildingName"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/poppins_semibold"-->
<!--                    android:backgroundTint="@color/white"-->
<!--                    android:paddingVertical="12dp"-->
<!--                    android:hint="@string/building_name"-->
<!--                    android:textColor="@color/text_color"-->
<!--                    android:textSize="14sp" />-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <AutoCompleteTextView
                    android:id="@+id/buildingName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:paddingVertical="12dp"
                    android:text="@string/building_name"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flatNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:backgroundTint="@color/white"
                    android:paddingVertical="12dp"
                    android:hint="@string/flat_number"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:backgroundTint="@color/white"
                    android:paddingVertical="12dp"
                    android:hint="@string/person"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vehicleNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:backgroundTint="@color/white"
                    android:paddingVertical="12dp"
                    android:hint="@string/car_bike_no"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/btnDatePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/select_date"
                        android:textSize="16sp"
                        app:drawableRightCompat="@drawable/ic_arrow_down" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/btnTimePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/select_time"
                        android:textSize="16sp"
                        app:drawableRightCompat="@drawable/ic_arrow_down" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:paddingVertical="12dp"
                    android:text="@string/select_category"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:backgroundTint="@color/white"
                    android:paddingVertical="12dp"
                    android:hint="@string/remark"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/dark_blue"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/submit"
                android:textSize="20sp"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>