<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/menuIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/menu_icon"
                android:src="@drawable/menu_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/titlePart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_to_secure_home"
                android:textColor="@color/dark_blue"
                android:textSize="24sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/inDoorCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            android:layout_below="@+id/titlePart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:id="@+id/inDoorActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingHorizontal="20dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/in_icon"
                    android:src="@drawable/in_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="@string/in_door"
                    android:textColor="@color/dark_blue"
                    android:textSize="24sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/outDoorCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            android:layout_below="@+id/inDoorCard"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/outDoorActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingHorizontal="20dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/out_icon"
                    android:src="@drawable/out_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="@string/out_door"
                    android:textColor="@color/dark_blue"
                    android:textSize="24sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/staffInCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/outDoorCard"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:id="@+id/staffInActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/out_icon"
                    android:src="@drawable/in_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="@string/staff_entry"
                    android:textColor="@color/dark_blue"
                    android:textSize="24sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/staffInCard"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:id="@+id/staffOutActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                tools:ignore="UseCompoundDrawables">

                <!--                <ImageView-->
                <!--                    android:layout_width="50dp"-->
                <!--                    android:layout_height="50dp"-->
                <!--                    android:contentDescription="@string/out_icon"-->
                <!--                    android:src="@drawable/out_icon" />-->

                <!--                <TextView-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:gravity="center_vertical"-->
                <!--                    android:paddingStart="20dp"-->
                <!--                    android:text="@string/staff_exit"-->
                <!--                    android:textColor="@color/dark_blue"-->
                <!--                    android:textSize="24sp"-->
                <!--                    tools:ignore="RtlSymmetry" />-->
                <Button
                    android:id="@+id/sujal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="hello" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/customMenu"
            layout="@layout/navigation_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>